--- a/Exercise 1 - Week 6.ipynb
+++ b/Exercise 1 - Week 6.ipynb
@@ -317,16 +317,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1    125\n",
+       "0     60\n",
+       "Name: Survived, dtype: int64"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "\n",
     "from sklearn.preprocessing import normalize #get the function needed to normalize our data.\n",
     "\n",
     "X = df[['Age', 'SibSp', 'Pclass', 'Parch', 'female', 'male']] #create the X matrix\n",
     "X = normalize(X) #normalize the matrix to put everything on the same scale\n",
-    "y = df['Survived'] #create the y-variable\n"
+    "y = df['Survived'] #create the y-variable\n",
+    "\n",
+    "\n",
+    "df['Survived'].value_counts()"
    ]
   },
   {
@@ -365,12 +381,119 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[10,  9],\n",
+       "       [ 6, 31]], dtype=int64)"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.metrics import confusion_matrix\n",
+    "y_test_pred = knn.predict(X_test) #the predicted values\n",
+    "cm = confusion_matrix(y_test, y_test_pred) #creates a \"confusion matrix\"\n",
+    "cm"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Not survived P</th>\n",
+       "      <th>Survived P</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Not survive</th>\n",
+       "      <td>10</td>\n",
+       "      <td>9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Survived</th>\n",
+       "      <td>6</td>\n",
+       "      <td>31</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             Not survived P  Survived P\n",
+       "Not survive              10           9\n",
+       "Survived                  6          31"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "#In order to read it easily , let's make a dataframe out of it, and add labels to it.\n",
+    "conf_matrix = pd.DataFrame(cm, index=['Not survive', 'Survived'], columns = ['Not survived P', 'Survived P']) \n",
+    "conf_matrix"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1    37\n",
+       "0    19\n",
+       "Name: Survived, dtype: int64"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y_test.value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "#Grid search\n"
-   ]
+   "source": []
   }
  ],
  "metadata": {
