--- a/Exercise 1 - Week 6.ipynb
+++ b/Exercise 1 - Week 6.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -148,7 +148,7 @@
        "11      0    113783  C103  "
       ]
      },
-     "execution_count": 19,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -300,7 +300,7 @@
        "11      0    113783  C103       1     0  "
       ]
      },
-     "execution_count": 20,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -317,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -328,7 +328,7 @@
        "Name: Survived, dtype: int64"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -337,7 +337,7 @@
     "\n",
     "from sklearn.preprocessing import normalize #get the function needed to normalize our data.\n",
     "\n",
-    "X = df[['Age', 'SibSp', 'Pclass', 'Parch', 'female', 'male']] #create the X matrix\n",
+    "X = df[['Age', 'SibSp', 'Pclass', 'Parch', 'male']] #create the X matrix\n",
     "X = normalize(X) #normalize the matrix to put everything on the same scale\n",
     "y = df['Survived'] #create the y-variable\n",
     "\n",
@@ -347,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -357,16 +357,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.7321428571428571"
+       "0.6964285714285714"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -374,24 +374,24 @@
    "source": [
     "from sklearn.neighbors import KNeighborsClassifier #the object class we need\n",
     "\n",
-    "knn = KNeighborsClassifier(n_neighbors=5) #create a KNN-classifier with 5 neighbors (default)\n",
+    "knn = KNeighborsClassifier(n_neighbors=3) #create a KNN-classifier with 5 neighbors (default)\n",
     "knn = knn.fit(X_train, y_train) #this fits the k-nearest neigbor model with the train data\n",
     "knn.score(X_test, y_test) #calculate the fit on the test data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[10,  9],\n",
-       "       [ 6, 31]], dtype=int64)"
+       "array([[12,  7],\n",
+       "       [10, 27]], dtype=int64)"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -405,7 +405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -436,13 +436,13 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>Not survive</th>\n",
-       "      <td>10</td>\n",
-       "      <td>9</td>\n",
+       "      <td>12</td>\n",
+       "      <td>7</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Survived</th>\n",
-       "      <td>6</td>\n",
-       "      <td>31</td>\n",
+       "      <td>10</td>\n",
+       "      <td>27</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -450,11 +450,11 @@
       ],
       "text/plain": [
        "             Not survived P  Survived P\n",
-       "Not survive              10           9\n",
-       "Survived                  6          31"
+       "Not survive              12           7\n",
+       "Survived                 10          27"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -468,7 +468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -479,7 +479,7 @@
        "Name: Survived, dtype: int64"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -487,6 +487,13 @@
    "source": [
     "y_test.value_counts()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
