--- a/Exercise 1 - Week 6.ipynb
+++ b/Exercise 1 - Week 6.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [
     {
@@ -148,7 +148,7 @@
        "11      0    113783  C103  "
       ]
      },
-     "execution_count": 55,
+     "execution_count": 109,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [
     {
@@ -300,7 +300,7 @@
        "11      0    113783  C103       1     0  "
       ]
      },
-     "execution_count": 56,
+     "execution_count": 110,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -317,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [
     {
@@ -328,7 +328,7 @@
        "Name: Survived, dtype: int64"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 111,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -347,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -357,31 +357,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 128,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.6964285714285714"
-      ]
-     },
-     "execution_count": 59,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from sklearn.neighbors import KNeighborsClassifier #the object class we need\n",
     "\n",
     "knn = KNeighborsClassifier(n_neighbors=3) #create a KNN-classifier with 5 neighbors (default)\n",
     "knn = knn.fit(X_train, y_train) #this fits the k-nearest neigbor model with the train data\n",
-    "knn.score(X_test, y_test) #calculate the fit on the test data"
+    "accuracy = knn.score(X_test, y_test) #calculate the fit on the test data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 129,
    "metadata": {},
    "outputs": [
     {
@@ -391,7 +380,7 @@
        "       [10, 27]], dtype=int64)"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 129,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -405,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 130,
    "metadata": {},
    "outputs": [
     {
@@ -454,7 +443,7 @@
        "Survived                 10          27"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 130,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -468,7 +457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 131,
    "metadata": {},
    "outputs": [
     {
@@ -479,13 +468,74 @@
        "Name: Survived, dtype: int64"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 131,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "y_test.value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 132,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "recall  = 27 / (27 + 10)\n",
+    "precision = 27 / (27 + 7)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 133,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The accuracy is 0.6964285714285714\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f'The accuracy is {accuracy}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 134,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The recall is 0.7297297297297297\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f'The recall is {recall}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 135,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The precision is 0.7941176470588235\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f'The precision is {precision}')"
    ]
   },
   {
