--- a/Exercise 1 - Week 6.ipynb
+++ b/Exercise 1 - Week 6.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 236,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,14 +12,14 @@
     "\n",
     "\n",
     "df = pd.read_csv('titanic.csv')\n",
-    "\n",
+    "df = df[['Age', 'SibSp', 'Pclass', 'Parch', 'Sex', 'Survived']]\n",
     "\n",
     "df = df.dropna()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 237,
    "metadata": {},
    "outputs": [
     {
@@ -43,112 +43,74 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>PassengerId</th>\n",
-       "      <th>Survived</th>\n",
-       "      <th>Pclass</th>\n",
-       "      <th>Name</th>\n",
-       "      <th>Sex</th>\n",
        "      <th>Age</th>\n",
        "      <th>SibSp</th>\n",
+       "      <th>Pclass</th>\n",
        "      <th>Parch</th>\n",
-       "      <th>Ticket</th>\n",
-       "      <th>Cabin</th>\n",
+       "      <th>Sex</th>\n",
+       "      <th>Survived</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>22.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>male</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>2</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>Cumings, Mrs. John Bradley (Florence Briggs Th...</td>\n",
-       "      <td>female</td>\n",
        "      <td>38.0</td>\n",
        "      <td>1</td>\n",
+       "      <td>1</td>\n",
        "      <td>0</td>\n",
-       "      <td>PC 17599</td>\n",
-       "      <td>C85</td>\n",
+       "      <td>female</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>26.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>female</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>4</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>Futrelle, Mrs. Jacques Heath (Lily May Peel)</td>\n",
-       "      <td>female</td>\n",
        "      <td>35.0</td>\n",
        "      <td>1</td>\n",
+       "      <td>1</td>\n",
        "      <td>0</td>\n",
-       "      <td>113803</td>\n",
-       "      <td>C123</td>\n",
+       "      <td>female</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>7</td>\n",
+       "      <th>4</th>\n",
+       "      <td>35.0</td>\n",
        "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>McCarthy, Mr. Timothy J</td>\n",
-       "      <td>male</td>\n",
-       "      <td>54.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>17463</td>\n",
-       "      <td>E46</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>11</td>\n",
-       "      <td>1</td>\n",
        "      <td>3</td>\n",
-       "      <td>Sandstrom, Miss. Marguerite Rut</td>\n",
-       "      <td>female</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>PP 9549</td>\n",
-       "      <td>G6</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11</th>\n",
-       "      <td>12</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>Bonnell, Miss. Elizabeth</td>\n",
-       "      <td>female</td>\n",
-       "      <td>58.0</td>\n",
        "      <td>0</td>\n",
+       "      <td>male</td>\n",
        "      <td>0</td>\n",
-       "      <td>113783</td>\n",
-       "      <td>C103</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "    PassengerId  Survived  Pclass  \\\n",
-       "1             2         1       1   \n",
-       "3             4         1       1   \n",
-       "6             7         0       1   \n",
-       "10           11         1       3   \n",
-       "11           12         1       1   \n",
-       "\n",
-       "                                                 Name     Sex   Age  SibSp  \\\n",
-       "1   Cumings, Mrs. John Bradley (Florence Briggs Th...  female  38.0      1   \n",
-       "3        Futrelle, Mrs. Jacques Heath (Lily May Peel)  female  35.0      1   \n",
-       "6                             McCarthy, Mr. Timothy J    male  54.0      0   \n",
-       "10                    Sandstrom, Miss. Marguerite Rut  female   4.0      1   \n",
-       "11                           Bonnell, Miss. Elizabeth  female  58.0      0   \n",
-       "\n",
-       "    Parch    Ticket Cabin  \n",
-       "1       0  PC 17599   C85  \n",
-       "3       0    113803  C123  \n",
-       "6       0     17463   E46  \n",
-       "10      1   PP 9549    G6  \n",
-       "11      0    113783  C103  "
+       "    Age  SibSp  Pclass  Parch     Sex  Survived\n",
+       "0  22.0      1       3      0    male         0\n",
+       "1  38.0      1       1      0  female         1\n",
+       "2  26.0      0       3      0  female         1\n",
+       "3  35.0      1       1      0  female         1\n",
+       "4  35.0      0       3      0    male         0"
       ]
      },
-     "execution_count": 109,
+     "execution_count": 237,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -159,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 238,
    "metadata": {},
    "outputs": [
     {
@@ -183,124 +145,86 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>PassengerId</th>\n",
-       "      <th>Survived</th>\n",
-       "      <th>Pclass</th>\n",
-       "      <th>Name</th>\n",
-       "      <th>Sex</th>\n",
        "      <th>Age</th>\n",
        "      <th>SibSp</th>\n",
+       "      <th>Pclass</th>\n",
        "      <th>Parch</th>\n",
-       "      <th>Ticket</th>\n",
-       "      <th>Cabin</th>\n",
+       "      <th>Sex</th>\n",
+       "      <th>Survived</th>\n",
        "      <th>female</th>\n",
        "      <th>male</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>22.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>male</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>2</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>Cumings, Mrs. John Bradley (Florence Briggs Th...</td>\n",
-       "      <td>female</td>\n",
        "      <td>38.0</td>\n",
        "      <td>1</td>\n",
+       "      <td>1</td>\n",
        "      <td>0</td>\n",
-       "      <td>PC 17599</td>\n",
-       "      <td>C85</td>\n",
+       "      <td>female</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>26.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>female</td>\n",
+       "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>4</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>Futrelle, Mrs. Jacques Heath (Lily May Peel)</td>\n",
-       "      <td>female</td>\n",
        "      <td>35.0</td>\n",
        "      <td>1</td>\n",
+       "      <td>1</td>\n",
        "      <td>0</td>\n",
-       "      <td>113803</td>\n",
-       "      <td>C123</td>\n",
+       "      <td>female</td>\n",
+       "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>7</td>\n",
+       "      <th>4</th>\n",
+       "      <td>35.0</td>\n",
        "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>McCarthy, Mr. Timothy J</td>\n",
-       "      <td>male</td>\n",
-       "      <td>54.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>17463</td>\n",
-       "      <td>E46</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>11</td>\n",
-       "      <td>1</td>\n",
        "      <td>3</td>\n",
-       "      <td>Sandstrom, Miss. Marguerite Rut</td>\n",
-       "      <td>female</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>PP 9549</td>\n",
-       "      <td>G6</td>\n",
-       "      <td>1</td>\n",
        "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11</th>\n",
-       "      <td>12</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>Bonnell, Miss. Elizabeth</td>\n",
-       "      <td>female</td>\n",
-       "      <td>58.0</td>\n",
+       "      <td>male</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>113783</td>\n",
-       "      <td>C103</td>\n",
        "      <td>1</td>\n",
-       "      <td>0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "    PassengerId  Survived  Pclass  \\\n",
-       "1             2         1       1   \n",
-       "3             4         1       1   \n",
-       "6             7         0       1   \n",
-       "10           11         1       3   \n",
-       "11           12         1       1   \n",
-       "\n",
-       "                                                 Name     Sex   Age  SibSp  \\\n",
-       "1   Cumings, Mrs. John Bradley (Florence Briggs Th...  female  38.0      1   \n",
-       "3        Futrelle, Mrs. Jacques Heath (Lily May Peel)  female  35.0      1   \n",
-       "6                             McCarthy, Mr. Timothy J    male  54.0      0   \n",
-       "10                    Sandstrom, Miss. Marguerite Rut  female   4.0      1   \n",
-       "11                           Bonnell, Miss. Elizabeth  female  58.0      0   \n",
-       "\n",
-       "    Parch    Ticket Cabin  female  male  \n",
-       "1       0  PC 17599   C85       1     0  \n",
-       "3       0    113803  C123       1     0  \n",
-       "6       0     17463   E46       0     1  \n",
-       "10      1   PP 9549    G6       1     0  \n",
-       "11      0    113783  C103       1     0  "
+       "    Age  SibSp  Pclass  Parch     Sex  Survived  female  male\n",
+       "0  22.0      1       3      0    male         0       0     1\n",
+       "1  38.0      1       1      0  female         1       1     0\n",
+       "2  26.0      0       3      0  female         1       1     0\n",
+       "3  35.0      1       1      0  female         1       1     0\n",
+       "4  35.0      0       3      0    male         0       0     1"
       ]
      },
-     "execution_count": 110,
+     "execution_count": 238,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -317,18 +241,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 239,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1    125\n",
-       "0     60\n",
+       "0    424\n",
+       "1    290\n",
        "Name: Survived, dtype: int64"
       ]
      },
-     "execution_count": 111,
+     "execution_count": 239,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -347,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 240,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -357,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 241,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -370,17 +294,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 242,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[12,  7],\n",
-       "       [10, 27]], dtype=int64)"
+       "array([[102,  32],\n",
+       "       [ 21,  60]], dtype=int64)"
       ]
      },
-     "execution_count": 129,
+     "execution_count": 242,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -394,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 243,
    "metadata": {},
    "outputs": [
     {
@@ -425,13 +349,13 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>Not survive</th>\n",
-       "      <td>12</td>\n",
-       "      <td>7</td>\n",
+       "      <td>102</td>\n",
+       "      <td>32</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Survived</th>\n",
-       "      <td>10</td>\n",
-       "      <td>27</td>\n",
+       "      <td>21</td>\n",
+       "      <td>60</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -439,11 +363,11 @@
       ],
       "text/plain": [
        "             Not survived P  Survived P\n",
-       "Not survive              12           7\n",
-       "Survived                 10          27"
+       "Not survive             102          32\n",
+       "Survived                 21          60"
       ]
      },
-     "execution_count": 130,
+     "execution_count": 243,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -457,18 +381,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 244,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1    37\n",
-       "0    19\n",
+       "0    134\n",
+       "1     81\n",
        "Name: Survived, dtype: int64"
       ]
      },
-     "execution_count": 131,
+     "execution_count": 244,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -479,24 +403,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 245,
    "metadata": {},
    "outputs": [],
    "source": [
-    "recall  = 27 / (27 + 10)\n",
-    "precision = 27 / (27 + 7)"
+    "recall  = conf_matrix.iloc[1,1] / (conf_matrix.iloc[1,1]+ conf_matrix.iloc[0,1])\n",
+    "precision = conf_matrix.iloc[1,1] / (conf_matrix.iloc[1,1] + conf_matrix.iloc[1,0])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 246,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The accuracy is 0.6964285714285714\n"
+      "The accuracy is 0.7534883720930232\n"
      ]
     }
    ],
@@ -506,14 +430,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 247,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The recall is 0.7297297297297297\n"
+      "The recall is 0.6521739130434783\n"
      ]
     }
    ],
@@ -523,14 +447,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 248,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The precision is 0.7941176470588235\n"
+      "The precision is 0.7407407407407407\n"
      ]
     }
    ],
